Fixed tags leaving the viewport on mobile

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -41,11 +41,6 @@ a < img {
   outline: none;
 }
 
-/*#content {
-  width: 700px;
-  margin: auto;
-}*/
-
 #content {
   max-width: 700px;
   margin: auto;
@@ -90,12 +85,10 @@ a < img {
   line-height: 1.35em;
 }
 
-.post-tags > a {
-  color: inherit;
-}
-
 .taglink {
-  padding: 20px 10px;
+  display: inline-block;
+  color: inherit;
+  padding: 0px 10px;
 }
 
 .taglink:hover {
